make sure pie and chloropleth legends aren't too big in fullscreen mode

--- a/frontend/src/components/dashboard/dashboard.css
+++ b/frontend/src/components/dashboard/dashboard.css
@@ -423,6 +423,10 @@
   .Dashboard.Dashboard--fullscreen { font-size: 1.2em; }
   /* keep the dashboard header title from being overwhelmingly large */
   .Dashboard.Dashboard--fullscreen .Header-title-name { font-size: 1em; }
+
+  .Dashboard.Dashboard--fullscreen .fullscreen-text-small .LegendItem {
+    font-size: 1em;
+  }
 }
 
 @media screen and (min-width: 1540px) {
