--- a/frontend/src/visualizations/components/Legend.css
+++ b/frontend/src/visualizations/components/Legend.css
@@ -1,15 +1,21 @@
+
+/*
+legend item needs to be in the scope in order to control the font size in
+fullscreen dashboard mode
+*/
+.LegendItem {
+  font-size: 1.2em;
+  font-weight: bold;
+  transition: opacity 0.25s linear;
+  opacity: 1;
+}
+
 :local .LegendHeader {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
   height: 24px;
 }
 
-:local .LegendItem {
-  font-size: 1.2em;
-  font-weight: bold;
-  transition: opacity 0.25s linear;
-  opacity: 1;
-}
 :local(.LegendItem).muted {
   opacity: 0.4;
 }
